create github pages

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-1" style="background-image: url(assets/images/banner-header-daff-2000x1087.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-1" style="background-image: url(assets/images/banner-header-daff-2000x1087.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(204, 204, 204);">
     </div>
@@ -120,9 +120,7 @@ South Africa</h3>
                 <figure class="mbr-figure">
                     <div><img src="assets/images/daff-banner-1400x482.jpg"></div>
 
-                    <figcaption class="mbr-figure-caption mbr-figure-caption-over">
-                        <div class="container">Procedures to be followed when importing plants and plant products into South Africa</div>
-                    </figcaption>
+                    
 
                 </figure>
             </div>
@@ -163,13 +161,13 @@ South Africa</h3>
                 <div><a href="https://www.youtube.com/watch?v=ioo1TQLO48U&amp;feature=youtu.be" target="_blank" class="socicon socicon-youtube mbr-iconfont mbr-iconfont-contacts1"></a></div>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Address</strong><br><strong>National Plant Protection Organisation of South &nbsp;Africa (NPPOZA) </strong><br><br><strong>Department of Agriculture, <br>Forestry and Fisheries </strong><br><br><strong>Plant Health Import <br>Permit Office </strong><br><br>P.O Box 40024, Arcadia, 0007<br></p>
+                <p><strong>Address</strong><br>National Plant Protection Organisation of South &nbsp;Africa (NPPOZA) <br><br>Department of Agriculture, <br>Forestry and Fisheries <br><br><strong>Plant Health Import </strong><br>Permit Office <br><br>P.O Box 40024, Arcadia, 0007<br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Contacts</strong><br><strong>
-Email: </strong>PlantHealthPermits@daff.gov.za<br><strong>
-Phone: </strong>+27 12 319 6130<br><strong>
-Fax: </strong>+27 12 329 8292<br><br><strong>Physical Address: </strong>542 or 543 Harvest House, 30 Hamilton Street, Arcadia, Pretoria<br> </p>
+                <p><strong>Contacts</strong><br>
+Email: PlantHealthPermits@daff.gov.za<br>
+Phone: +27 12 319 6130<br>
+Fax: +27 12 329 8292<br><br>Physical Address: 542 or 543 Harvest House, 30 Hamilton Street, Arcadia, Pretoria<br> </p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p></p><p><strong>Links</strong><br>
